# time-buddy

./: .gitignore  CHANGELOG.md  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  time_buddy.db  time_buddy.py
.github/workflows/: publish-pypi.yml  release.yml
