[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "time-buddy"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simple to use time tracking CLI for macOS."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = [
    "tzlocal",
    "halo",
    "colorama",
]

[project.scripts]
time-buddy = "time_buddy:main"
